# diplom_project

./: crud.py  main.py  pyproject.toml  test.db
static/: style.css
templates/: base.html  index.html
