[project]
name = "diplom-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "app>=0.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
